--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
     font-family: 'Intern';
-    src: url(Inter-VariableFont_slnt\,wght.ttf);
+    src: url(Inter-VariableFont_slnt_wght.ttf);
 }
     </style>
     <link rel="preload" href="Inter-VariableFont_slnt_wght.ttf" as="font" type="font/ttf" crossorigin>
