Fixed Font Loading

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         @font-face {
     font-family: 'Intern';
     src: url(Inter-VariableFont_slnt_wght.ttf);
+    font-display: swap;
 }
     </style>
     <link rel="preload" href="Inter-VariableFont_slnt_wght.ttf" as="font" type="font/ttf" crossorigin>
